--- a/src/components/todo/index.css
+++ b/src/components/todo/index.css
@@ -44,6 +44,7 @@ body {
 
 .todoapp {
 	background: #fff;
+	width: 500px;
 	margin: 130px 0 40px 0;
 	position: relative;
 	box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.2),
